log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Thu 30 Mar 2023 11:03:05 PM UTC: 
 arraylist.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
96cc939
Thu 30 Mar 2023 11:06:16 PM UTC: 
 arraylist.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:19:16: error: expected ‘;’ before ‘return’
   19 |   array->size=0
      |                ^
      |                ;
   20 | 
   21 |   return array;
      |   ~~~~~~        
arraylist.c:23:1: error: control reaches end of non-void function [-Werror=return-type]
   23 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
78f0c3c
Thu 30 Mar 2023 11:06:23 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
4341c31
Thu 30 Mar 2023 11:10:24 PM UTC: 
 arraylist.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
 tests:  2|5
total_score: 15/70
eb646a4
Thu 30 Mar 2023 11:12:17 PM UTC: 
 arraylist.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  3|4
total_score: 20/70
f0eb83c
Thu 30 Mar 2023 11:14:47 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
1f2c9fc
Thu 30 Mar 2023 11:15:04 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
48358cb
Thu 30 Mar 2023 11:20:42 PM UTC: 
 arraylist.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  0|0
a88a53f
Thu 30 Mar 2023 11:20:54 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
852b11a
Thu 30 Mar 2023 11:21:34 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 30/70
b794d64
Thu 30 Mar 2023 11:22:21 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
e840ffd
Thu 30 Mar 2023 11:22:56 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
f8aa6cf
Thu 30 Mar 2023 11:23:11 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7bd34ec
Thu 30 Mar 2023 11:23:41 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d8d8053
Thu 30 Mar 2023 11:23:53 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 30/70
b2d8b7d
Fri 31 Mar 2023 12:37:46 AM UTC: 
 arraylist.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘pop’:
arraylist.c:58:10: error: returning ‘int’ from a function with return type ‘void *’ makes pointer from integer without a cast [-Werror=int-conversion]
   58 |   return i;
      |          ^
cc1: all warnings being treated as errors
Compilation failed
7b53f06
Fri 31 Mar 2023 12:38:25 AM UTC: 
 arraylist.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 30/70
cc0d392
Fri 31 Mar 2023 12:43:20 AM UTC: 
 arraylist.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  6|3
total_score: 30/70
2fe1cee
